--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	
-	<img src="https://www.gannett-cdn.com/presto/2020/03/17/USAT/c0eff9ec-e0e4-42db-b308-f748933229ee-XXX_ThinkstockPhotos-200460053-001
+	<img src="https://www.gannett-cdn.com/presto/2020/03/17/USAT/c0eff9ec-e0e4-42db-b308-f748933229ee-XXX_ThinkstockPhotos-200460053-001" alt="cute puppy">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
