--- a/main.html
+++ b/main.html
@@ -8,11 +8,12 @@
 
 <body>
 	
-	<img src="https://www.gannett-cdn.com/presto/2020/03/17/USAT/c0eff9ec-e0e4-42db-b308-f748933229ee-XXX_ThinkstockPhotos-200460053-001" alt="cute puppy">
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+		</script>
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSn2deOLJVvvOkKwK34GfyPS9ByQ9RG_Q62Mq-xgl1T&amp;s" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb" alt="10,000+ Best Pictures of Dogs · 100% Free Download · Pexels ..." data-noaft="1" style="width: 160px; height: 120px; margin: 42.75px 0px;" alt="cute dog picture">
+
 
 </body>
-
 </html>
